fix alignments

--- a/docs/scss/components/_typography.scss
+++ b/docs/scss/components/_typography.scss
@@ -83,7 +83,7 @@ a {
   color: rgba($white, 0.65);
 }
 
-@media (max-width: 767px) {
+@media (max-width: 500px) {
   .highlight .text-right {
     text-align: left !important;
   }
